--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -11,4 +11,9 @@ metallb:
   enabled: true
   namespace: kube-system
   version: 0.10.2
-    
+  config: |
+    address-pools:
+    - name: default
+      protocol: layer2
+      addresses:
+      - 192.168.88.20-192.168.88.30
