feat: add metallb config

--- a/cluster-bootstrap/templates/application-metallb.yaml
+++ b/cluster-bootstrap/templates/application-metallb.yaml
@@ -14,6 +14,9 @@ spec:
   source:
     chart: metallb
     helm:
+      parameters:
+      - name: existingConfigMap
+        value: metallb-configmap
       valueFiles:
       - values.yaml
     repoURL: https://metallb.github.io/metallb
