--- a/cluster-bootstrap/templates/application-traefik.yaml
+++ b/cluster-bootstrap/templates/application-traefik.yaml
@@ -14,6 +14,7 @@ spec:
   source:
     chart: traefik
     helm:
+      values: {{ .Values.traefik.values }}
       valueFiles:
       - values.yaml
     repoURL: https://helm.traefik.io/traefik
