--- a/cluster-bootstrap/templates/application-traefik.yaml
+++ b/cluster-bootstrap/templates/application-traefik.yaml
@@ -14,12 +14,8 @@ spec:
   source:
     chart: traefik
     helm:
-      values: |
-        service:
-        enabled: true
-        type: LoadBalancer
-        spec:
-          loadBalancerIP: "192.168.88.20"
+      values: |-
+        {{ .Values.traefik.values | indent 4 }}
       valueFiles:
       - values.yaml
     repoURL: https://helm.traefik.io/traefik
