--- a/cluster-bootstrap/templates/configmap-metallb.yaml
+++ b/cluster-bootstrap/templates/configmap-metallb.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   namespace: {{ .Values.metallb.namespace }}
-  name: metallb-config
+  name: metallb-configmap
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
 data:
