--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -18,3 +18,10 @@ metallb:
   namespace: kube-system
   version: 0.10.2
   addresses: 192.168.88.20-192.168.88.30
+  values: |
+    configInline:
+    address-pools:
+    - name: default
+      protocol: layer2
+      addresses:
+      - 192.168.88.20-192.168.88.30
