--- a/cluster-bootstrap/templates/application-traefik.yaml
+++ b/cluster-bootstrap/templates/application-traefik.yaml
@@ -14,6 +14,8 @@ spec:
   source:
     chart: traefik
     helm:
+      values: |-
+{{ .Values.metallb.values | indent 8 }}
       valueFiles:
       - values.yaml
     repoURL: https://helm.traefik.io/traefik
