feat: add prune to sync policy

--- a/manifests/application-cluster-bootstrap.yaml
+++ b/manifests/application-cluster-bootstrap.yaml
@@ -16,4 +16,5 @@ spec:
     repoURL: https://github.com/rizkidoank/kubernetes-bootstrap.git
     targetRevision: HEAD
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
