--- a/cluster-bootstrap/templates/ingress-routes.yaml
+++ b/cluster-bootstrap/templates/ingress-routes.yaml
@@ -2,16 +2,16 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: traefik-host-dashboard
+  name: dashboard
   namespace: kube-system
 spec:
   entryPoints:
-    - traefik
+    - web
   routes:
     - match: Host(`traefik.rizkidoank.internal`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
       kind: Rule
       services:
-        - name: dashboard@internal
+        - name: api@internal
           kind: TraefikService
 ---
 apiVersion: traefik.containo.us/v1alpha1
