feat: add argo ingressroute

--- a/cluster-bootstrap/templates/ingress-routes.yaml
+++ b/cluster-bootstrap/templates/ingress-routes.yaml
@@ -24,13 +24,13 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: Host(`argocd.example.com`)
+      match: Host(`argocd.rizkidoank.internal`)
       priority: 10
       services:
         - name: argocd-server
           port: 80
     - kind: Rule
-      match: Host(`argocd.example.com`) && Headers(`Content-Type`, `application/grpc`)
+      match: Host(`argocd.rizkidoank.internal`) && Headers(`Content-Type`, `application/grpc`)
       priority: 11
       services:
         - name: argocd-server
