--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -35,3 +35,9 @@ metallb:
         protocol: layer2
         addresses:
         - 192.168.88.20-192.168.88.30
+
+prometheus_stack:
+  enabled: true
+  namespace: monitoring
+  version: 18.0.1 
+ 
