feat: add vars prometheus stack

--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -40,4 +40,9 @@ prometheus_stack:
   enabled: true
   namespace: monitoring
   version: 18.0.1 
-  values: ""
+  values: |
+    prometheusOperator:
+      admissionWebhooks:
+        enabled: false
+        patch:
+          enabled: false
