--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -46,3 +46,9 @@ prometheus_stack:
         enabled: false
         patch:
           enabled: false
+
+kubernetes_dashboard:
+  enabled: true
+  namespace: kube-system
+  version: 4.6.0
+  values: ""
