--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -51,4 +51,9 @@ kubernetes_dashboard:
   enabled: true
   namespace: kube-system
   version: 4.6.0
-  values: ""
+  values: |
+    protocolHttp: true
+    extraArgs:
+    - --enable-skip-login
+    - --enable-insecure-login
+    - --system-banner="Welcome to Kubernetes"
