--- a/cluster-bootstrap/templates/ingress-routes.yaml
+++ b/cluster-bootstrap/templates/ingress-routes.yaml
@@ -44,7 +44,7 @@ metadata:
   namespace: kube-system
 spec:
   entryPoints:
-    - websecure
+    - web
   routes:
     - kind: Rule
       match: Host(`k8s-dashboard.rizkidoank.internal`)
