--- a/cluster-bootstrap/templates/ingress-routes.yaml
+++ b/cluster-bootstrap/templates/ingress-routes.yaml
@@ -53,3 +53,20 @@ spec:
         - name: prometheus-stack-grafana
           port: 80
           scheme: http
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: prometheus
+  namespace: monitoring
+spec:
+  entryPoints:
+    - web
+  routes:
+    - kind: Rule
+      match: Host(`prometheus.rizkidoank.internal`)
+      priority: 10
+      services:
+        - name: prometheus-stack-kube-prom-prometheus
+          port: 9090
+          scheme: http
