--- a/cluster-bootstrap/templates/namespaces.yaml
+++ b/cluster-bootstrap/templates/namespaces.yaml
@@ -6,3 +6,12 @@ metadata:
     app: monitoring
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: vault
+  labels:
+    app: vault
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
