--- a/cluster-bootstrap/templates/namespaces.yaml
+++ b/cluster-bootstrap/templates/namespaces.yaml
@@ -15,3 +15,12 @@ metadata:
     app: vault
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: longhorn-system
+  labels:
+    app: longhorn-system
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
