feat: add longhorn ingressroute

--- a/cluster-bootstrap/templates/ingress-routes.yaml
+++ b/cluster-bootstrap/templates/ingress-routes.yaml
@@ -70,3 +70,20 @@ spec:
         - name: prometheus-stack-kube-prom-prometheus
           port: 9090
           scheme: http
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: longhorn
+  namespace: longhorn-system
+spec:
+  entryPoints:
+    - web
+  routes:
+    - kind: Rule
+      match: Host(`longhorn.rizkidoank.internal`)
+      priority: 10
+      services:
+        - name: longhorn-ui
+          port: 80
+          scheme: http
