--- a/cluster-bootstrap/templates/namespaces.yaml
+++ b/cluster-bootstrap/templates/namespaces.yaml
@@ -10,9 +10,9 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: vault
+  name: traefik
   labels:
-    app: vault
+    app: traefik
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
 ---
@@ -22,5 +22,14 @@ metadata:
   name: longhorn-system
   labels:
     app: longhorn-system
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: metallb-system
+  labels:
+    app: metallb-system
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
