--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -4,7 +4,7 @@ argocd:
 
 traefik:
   enabled: true
-  namespace: kube-system
+  namespace: traefik
   version: 10.3.1
   values: |
     logs:
@@ -26,7 +26,7 @@ traefik:
 
 metallb:
   enabled: true
-  namespace: kube-system
+  namespace: metallb-system
   version: 0.10.2
   values: |
     configInline:
@@ -51,18 +51,7 @@ longhorn:
   enabled: true
   namespace: longhorn-system
   version: 1.1.2
-  values: |
-    image:
-      longhorn:
-        engine:
-          repository: longhornio/longhorn-engine
-          tag: v1.2.0-rc2
-        manager:
-          repository: longhornio/longhorn-manager
-          tag: v1.2.0-rc2
-        ui:
-          repository: longhornio/longhorn-ui
-          tag: v1.2.0-rc2
+  values: ""
 
 postgres:
   enabled: false
@@ -94,4 +83,3 @@ vault:
           storage "file" {
             path = "/vault/data"
           }
-
