--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -55,6 +55,12 @@ longhorn:
   version: 1.1.2
   values: ""
 
+rook_ceph:
+  enabled: true
+  namespace: rook-ceph
+  version: 0.0.1
+  values: ""
+
 postgres:
   enabled: false
   namespace: vault
