--- a/cluster-bootstrap/templates/application-rook-ceph-cluster.yaml
+++ b/cluster-bootstrap/templates/application-rook-ceph-cluster.yaml
@@ -1,8 +1,8 @@
-{{- if .Values.rook_ceph.enabled -}}
+{{- if .Values.rook_ceph_cluster.enabled -}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: rook-ceph
+  name: rook-ceph-cluster
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "2"
@@ -10,16 +10,16 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: {{ .Values.rook_ceph.namespace }}
+    namespace: {{ .Values.rook_ceph_cluster.namespace }}
     server: {{ .Values.argocd.cluster }}
   project: {{ .Values.argocd.project }}
   source:
-    chart: rook-ceph
+    chart: rook-ceph-cluster
     helm:
       values: |-
-{{ .Values.rook_ceph.values | indent 8 }}
+{{ .Values.rook_ceph_cluster.values | indent 8 }}
       valueFiles:
       - values.yaml
     repoURL: https://charts.rook.io/release
-    targetRevision: {{ .Values.rook_ceph.version }}
+    targetRevision: {{ .Values.rook_ceph_cluster.version }}
 {{- end }}
