--- a/cluster-bootstrap/templates/namespaces.yaml
+++ b/cluster-bootstrap/templates/namespaces.yaml
@@ -28,6 +28,15 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: rook-ceph-cluster
+  labels:
+    app: rook-ceph-cluster
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: metallb-system
   labels:
     app: metallb-system
