--- a/cluster-bootstrap/templates/ingress-routes.yaml
+++ b/cluster-bootstrap/templates/ingress-routes.yaml
@@ -36,7 +36,29 @@ spec:
         - name: argocd-server
           port: 80
           scheme: h2c
-#---
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: argocd-server-pub
+  namespace: argocd
+spec:
+  entryPoints:
+    - web
+  routes:
+    - kind: Rule
+      match: Host(`argocd.rizkidoank.com`)
+      priority: 10
+      services:
+        - name: argocd-server
+          port: 80
+    - kind: Rule
+      match: Host(`argocd.rizkidoank.com`) && Headers(`Content-Type`, `application/grpc`)
+      priority: 11
+      services:
+        - name: argocd-server
+          port: 80
+          scheme: h2c
 #apiVersion: traefik.containo.us/v1alpha1
 #kind: IngressRoute
 #metadata:
