--- a/manifests/applications/application-services.yaml
+++ b/manifests/applications/application-services.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-bootstrap
+  name: services
   namespace: argocd
 spec:
   destination:
