--- a/services/values.yaml
+++ b/services/values.yaml
@@ -5,7 +5,7 @@ argocd:
 jenkins:
   enabled: true
   namespace: default
-  version: 8.0.10
+  version: "8.0.11"
   values: |
     persistence:
       enabled: false
