--- a/services/templates/ingress-routes.yaml
+++ b/services/templates/ingress-routes.yaml
@@ -1,16 +1,16 @@
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: dashboard
-  namespace: infrastructure
-spec:
-  entryPoints:
-    - web
-  routes:
-    - match: Host(`traefik.rizkidoank.internal`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
-      kind: Rule
-      services:
-        - name: api@internal
-          kind: TraefikService
----
+# ---
+# apiVersion: traefik.containo.us/v1alpha1
+# kind: IngressRoute
+# metadata:
+#   name: dashboard
+#   namespace: infrastructure
+# spec:
+#   entryPoints:
+#     - web
+#   routes:
+#     - match: Host(`traefik.rizkidoank.internal`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
+#       kind: Rule
+#       services:
+#         - name: api@internal
+#           kind: TraefikService
+# ---
