--- a/cluster-bootstrap/templates/ingress-routes.yaml
+++ b/cluster-bootstrap/templates/ingress-routes.yaml
@@ -75,3 +75,55 @@ spec:
       services:
         - name: longhorn-frontend
           port: 80
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+ name: prometheus-grafana
+ namespace: infrastructure
+spec:
+ entryPoints:
+   - web
+ routes:
+   - kind: Rule
+     match: Host(`grafana.rizkidoank.internal`)
+     priority: 10
+     services:
+       - name: prometheus-stack-grafana
+         port: 80
+         scheme: http
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+ name: prometheus-grafana-pub
+ namespace: infrastructure
+spec:
+ entryPoints:
+   - web
+ routes:
+   - kind: Rule
+     match: Host(`grafana.rizkidoank.com`)
+     priority: 10
+     services:
+       - name: prometheus-stack-grafana
+         port: 80
+         scheme: http
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+ name: prometheus
+ namespace: infrastructure
+spec:
+ entryPoints:
+   - web
+ routes:
+   - kind: Rule
+     match: Host(`prometheus.rizkidoank.internal`)
+     priority: 10
+     services:
+       - name: prometheus-stack-kube-prom-prometheus
+         port: 9090
+         scheme: http
+---
