feat: add redis

--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -54,3 +54,9 @@ prometheus_stack:
         enabled: false
         patch:
           enabled: false
+
+redis:
+  enabled: true
+  namespace: default
+  version: 15.3.2
+  values: ""
