--- a/releases/argocd/values.yaml
+++ b/releases/argocd/values.yaml
@@ -911,13 +911,13 @@ repoServer:
     #     - all
     # readOnlyRootFilesystem: true
 
-  resources:
-   limits:
-     cpu: 50m
-     memory: 128Mi
-   requests:
-     cpu: 10m
-     memory: 64Mi
+  resources: {}
+  #  limits:
+  #    cpu: 100m
+  #    memory: 256Mi
+  #  requests:
+  #    cpu: 20m
+  #    memory: 128Mi
 
   ## Repo server service configuration
   service:
