--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -42,6 +42,30 @@ longhorn:
   version: 1.1.2
   values: ""
 
+vaulr:
+  enabled: true
+  namespace: infrastructure
+  version: 0.16.0
+  values: |
+    certs:
+      resources:
+        requests:
+          memory: 256Mi
+          cpu: 250m
+        limits:
+          memory: 256Mi
+          cpu: 250m
+    server:
+      resources:
+        requests:
+          memory: 256Mi
+          cpu: 250m
+        limits:
+          memory: 256Mi
+          cpu: 250m
+    ui:
+      enabled: true
+
 prometheus_stack:
   enabled: true
   namespace: infrastructure
