--- a/cluster-bootstrap/values.yaml
+++ b/cluster-bootstrap/values.yaml
@@ -46,25 +46,7 @@ vaulr:
   enabled: true
   namespace: infrastructure
   version: 0.16.0
-  values: |
-    certs:
-      resources:
-        requests:
-          memory: 256Mi
-          cpu: 250m
-        limits:
-          memory: 256Mi
-          cpu: 250m
-    server:
-      resources:
-        requests:
-          memory: 256Mi
-          cpu: 250m
-        limits:
-          memory: 256Mi
-          cpu: 250m
-    ui:
-      enabled: true
+  values: ""
 
 prometheus_stack:
   enabled: true
